manifests/prod/opentelemetry/Service-opentelemetry-operator-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry-operator
  name: opentelemetry-operator-webhook
  namespace: opentelemetry
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: webhook-server
  selector:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: opentelemetry-operator
