manifests/prod/opentelemetry/Service-opentelemetry-operator.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/instance: opentelemetry-operator
    app.kubernetes.io/name: opentelemetry-operator
    app.kubernetes.io/part-of: opentelemetry-operator
  name: opentelemetry-operator
  namespace: opentelemetry
spec:
  ports:
    - name: metrics
      port: 8443
      protocol: TCP
      targetPort: metrics
  selector:
    app.kubernetes.io/component: controller-manager
    app.kubernetes.io/name: opentelemetry-operator
